Vytvořeno pomocí služby Colaboratory

--- a/books_task.ipynb
+++ b/books_task.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7nKZW7YTZa49Sa+Quifk1",
+      "authorship_tag": "ABX9TyNJKgf2DGJdDsGR+M7o1VGl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +179,17 @@
       ],
       "metadata": {
         "id": "1_MLq7CswH7O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test"
+      ],
+      "metadata": {
+        "id": "kNCVG__b-L6N"
       },
       "execution_count": null,
       "outputs": []
